<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".login.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="15dp"
            android:text="@string/sign_up_title"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="117dp">

            <EditText
                android:id="@+id/edFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="231dp">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="340dp">

            <EditText
                android:id="@+id/edContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_number"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="416dp">

            <EditText
                android:id="@+id/edAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="416dp">

            <EditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            app:passwordToggleEnabled="true"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="416dp">

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:padding="15dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="416dp">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius"
                android:onClick="signUp"
                android:text="@string/sign_up" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>